finish - quran service

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -20,5 +20,14 @@
           },
           "description": "Opens Muslim app"
         }
-    }
+    },
+  "permissions": [
+    "storage"
+  ],
+  "background": {
+    "scripts": [
+      "background.js",
+      "runtime.js"
+    ]
+  }
 }
