add - date for day

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -22,7 +22,8 @@
         }
     },
   "permissions": [
-    "storage"
+    "storage",
+    "geolocation"
   ],
   "background": {
     "scripts": [
